Behavior of recorder controlled by ctr params.